InspectionList Map filter update Files modified - [InspectionList]

--- a/src/main/webapp/pages/InspectionList/InspectionList.html
+++ b/src/main/webapp/pages/InspectionList/InspectionList.html
@@ -114,7 +114,7 @@
                                             <wm-composite name="composite2" margin="unset unset unset 0.2em">
                                                 <wm-label class="col-md-3 form-control-static" name="label3" caption="Filter Results" fontweight="bold" width="100px"></wm-label>
                                                 <wm-container class="col-md-9" name="container2" width="180px">
-                                                    <wm-select name="selectInspectionFilter" dataset="All,My,Team" on-change="selectInspectionFilterChange($event, $scope, newVal, oldVal)" datavalue="All"></wm-select>
+                                                    <wm-select name="selectInspectionFilter" dataset="All,My,Team" on-change="selectInspectionFilterChange($event, $scope, newVal, oldVal)" datavalue="Team"></wm-select>
                                                 </wm-container>
                                             </wm-composite>
                                         </wm-gridcolumn>
