updated company details partial page as tabbed layout to match the rest of the application Files modified - [CompanyProfile,CompanyDetails]

--- a/src/main/webapp/pages/CompanyProfile/CompanyProfile.html
+++ b/src/main/webapp/pages/CompanyProfile/CompanyProfile.html
@@ -11,10 +11,10 @@
                     </wm-gridcolumn>
                 </wm-gridrow>
                 <wm-gridrow name="gridrow9">
-                    <wm-gridcolumn columnwidth="6" name="gridcolumn23" padding="2em unset">
+                    <wm-gridcolumn columnwidth="6" name="gridcolumn23" padding="unset unset 1em unset">
                         <wm-label name="label1" caption="My Company Profile" fontweight="bold" class="h4"></wm-label>
                     </wm-gridcolumn>
-                    <wm-gridcolumn columnwidth="6" name="gridcolumn24" padding="2em unset">
+                    <wm-gridcolumn columnwidth="6" name="gridcolumn24" padding="unset unset 1em unset">
                         <wm-panel iconclass="" autoclose="outsideClick" name="panel2" title="" content="selectCompany" class="panel-transparent">
                             <wm-param name="companyId" value="bind:pageParams.companyID" type="integer"></wm-param>
                         </wm-panel>
