--- a/src/main/webapp/pages/CompanyMunicipalities/CompanyMunicipalities.html
+++ b/src/main/webapp/pages/CompanyMunicipalities/CompanyMunicipalities.html
@@ -11,10 +11,10 @@
                     </wm-gridcolumn>
                 </wm-gridrow>
                 <wm-gridrow name="gridrow1">
-                    <wm-gridcolumn columnwidth="6" name="gridcolumn1" padding="2em unset">
+                    <wm-gridcolumn columnwidth="6" name="gridcolumn1" padding="unset unset 1em unset">
                         <wm-label caption="Manage Municipalities" fontweight="bold" name="label1" class="h4"></wm-label>
                     </wm-gridcolumn>
-                    <wm-gridcolumn columnwidth="6" name="gridcolumn2" padding="2em unset">
+                    <wm-gridcolumn columnwidth="6" name="gridcolumn2" padding="unset unset 1em unset">
                         <wm-panel iconclass="" autoclose="outsideClick" name="panelSelectCompany" title="" content="selectCompany" class="panel-transparent">
                             <wm-param name="companyId" value="bind:pageParams.companyId" type="integer"></wm-param>
                         </wm-panel>
@@ -24,12 +24,17 @@
                     <wm-gridcolumn columnwidth="12" name="gridcolumn8">
                         <wm-panel iconclass="wi wi-account-balance" autoclose="outsideClick" name="panel2" class="panel-primary" title="Municipality Application Status">
                             <wm-layoutgrid name="layoutgrid3_1">
-                                <wm-gridrow name="gridrow6">
+                                <wm-gridrow name="gridrow6" padding="unset unset 1em unset">
                                     <wm-gridcolumn columnwidth="12" name="gridcolumn7">
-                                        <wm-label padding="unset 0.5em" name="label3" caption="Click &quot;+Add Municipality&quot; to submit your company details to a municipality in order for your company to be available on CivicXpress forms."></wm-label>
-                                        <wm-label padding="unset 0.5em" name="label4" caption="After your application has been submitted, the municipality will review your information within 1-2 business days."></wm-label>
-                                        <wm-label padding="unset 0.5em" name="label5" caption="Note: some municipalities require a Contractor Application Fee that must be submitted before your company is &quot;Approved&quot; for business in the municipality."></wm-label>
-                                        <wm-label padding="unset 0.5em" name="label5_1" caption="The municipality will reach out to you if an application payment is required or if there are any issues with the information you have provided on your &quot;Company Profile&quot; page."></wm-label>
+                                        <wm-label padding="unset 0.5em" name="label4" caption="In order for your company to be available as a selection on forms in CivicXpress, you need to be approved for business in one or many municipalities."></wm-label>
+                                        <wm-label padding="unset 0.5em" name="label10" caption="Use the &quot;+Add Municipality&quot; button to submit an application to each municipality where you would like to do business."></wm-label>
+                                    </wm-gridcolumn>
+                                </wm-gridrow>
+                                <wm-gridrow name="gridrow7_2">
+                                    <wm-gridcolumn columnwidth="12" name="gridcolumn8_1">
+                                        <wm-label padding="unset 0.5em" name="label6" caption="While the municipality is reviewing your application, the &quot;Review Status&quot; will display as &quot;Pending&quot;."></wm-label>
+                                        <wm-label padding="unset 0.5em" name="label7" caption="Once your company is approved for business within a municipality, the &quot;Review Status&quot; will show &quot;Approved&quot;. Users will then be able to select your company on new forms submitted to that municipality."></wm-label>
+                                        <wm-label padding="unset 0.5em" name="label8" caption="If your &quot;Review Status&quot; shows &quot;Suspended&quot;, then your company will not be available as a selection within that municipality, and you should contact the municipality in order to resolve that status."></wm-label>
                                     </wm-gridcolumn>
                                 </wm-gridrow>
                                 <wm-gridrow name="gridrow7_1">
@@ -37,38 +42,50 @@
                                         <wm-livegrid formlayout="dialog" name="livegrid2">
                                             <wm-grid gridfirstrowselect="true" editmode="dialog" title="" dataset="bind:Variables.VendorApprovalsData.dataSet" navigation="Classic" name="grid2_1" filtermode="multicolumn" exportformat="EXCEL" showrecordcount="true">
                                                 <wm-grid-column binding="rowOperations" caption="Actions" type="custom" width="100px" readonly="true" edit-widget-type="text" sortable="false" searchable="false" show="true" rowactionsposition="0"></wm-grid-column>
-                                                <wm-grid-column binding="municipalities.municipalityName" caption="Municipality" type="string" generator="assigned" edit-widget-type="text" show="true" related-entity-name="Municipalities"
-                                                readonly="false"></wm-grid-column>
+                                                <wm-grid-column binding="municipalities.municipalityName" caption="Municipality" type="string" generator="assigned" edit-widget-type="text" show="true" related-entity-name="Municipalities" readonly="false"></wm-grid-column>
                                                 <wm-grid-column binding="approvalStatus" caption="Review Status" type="string" generator="assigned" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
-                                                <wm-grid-column binding="dateApproved" caption="Date Reviewed" type="timestamp" generator="assigned" datepattern="MM-dd-yyyy" formatpattern="toDate" edit-widget-type="timestamp" show="true"
-                                                filterwidget="date" readonly="false"></wm-grid-column>
+                                                <wm-grid-column binding="dateApproved" caption="Date Reviewed" type="timestamp" generator="assigned" datepattern="MM-dd-yyyy" formatpattern="toDate" edit-widget-type="timestamp" show="true" filterwidget="date" readonly="false"></wm-grid-column>
                                                 <wm-grid-column binding="approvedBy" caption="Reviewed By" type="string" generator="assigned" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
-                                                <wm-grid-column binding="expiresDate" caption="Expiration Date" type="timestamp" generator="assigned" datepattern="MM-dd-yyyy" formatpattern="toDate" edit-widget-type="timestamp" show="true"
-                                                filterwidget="date" readonly="false"></wm-grid-column>
+                                                <wm-grid-column binding="expiresDate" caption="Expiration Date" type="timestamp" generator="assigned" datepattern="MM-dd-yyyy" formatpattern="toDate" edit-widget-type="timestamp" show="true" filterwidget="date" readonly="false"></wm-grid-column>
                                                 <wm-grid-action key="addNewRow" display-name="Add Municipality" show="true" class="btn-primary" iconclass="wi wi-plus" title="Add Municipality" action="addNewRow()" shortcutkey="" disabled="false"></wm-grid-action>
-                                                <wm-grid-row-action key="deleterow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-trash" title="Delete" action="deleteRow()" disabled="false"></wm-grid-row-action>
+                                                <wm-grid-row-action key="deleterow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-trash" title="Delete" action="deleteRow()" accessroles="CXAdmin" disabled="false"></wm-grid-row-action>
                                             </wm-grid>
-                                            <wm-liveform novalidate="false" errormessage="You have already applied to this municipality." title="Apply to Municipality" formlayout="dialog" iconclass="wi wi-account-balance" dataset="bind:Variables.VendorApprovalsData.dataSet"
-                                            captionalign="left" captionposition="top" name="liveform2_12" insertmessage="Your application has been submitted to the municipality. Please check back later for updated application status.">
+                                            <wm-liveform novalidate="false" errormessage="You have already applied to this municipality." title="Apply to Municipality" formlayout="dialog" iconclass="wi wi-account-balance" dataset="bind:Variables.VendorApprovalsData.dataSet" captionalign="left"
+                                            captionposition="top" name="liveform2_12" insertmessage="Your application has been submitted to the municipality. Please check back later for updated application status.">
                                                 <wm-layoutgrid columns="1" name="layoutgrid3">
+                                                    <wm-gridrow name="gridrow11_0">
+                                                        <wm-gridcolumn columnwidth="12" name="gridcolumn12_0">
+                                                            <wm-label padding="unset 0.5em" name="label6" caption="Please select a municipality where you would like to do business, then use the &quot;+Add Municipality&quot; button to submit an application to that municipality. This will submit the information contained on your &quot;Company Profile&quot; page to the selected municipality for review."></wm-label>
+                                                        </wm-gridcolumn>
+                                                    </wm-gridrow>
                                                     <wm-gridrow name="gridrow11">
                                                         <wm-gridcolumn columnwidth="12" name="gridcolumn12">
-                                                            <wm-form-field name="municipalities" displayname="What municipality would you like to do business with?" show="true" primary-key="false" generator="assigned" key="municipalities" type="list" is-related="true"
-                                                            readonly="false" required="true" widget="select" placeholder="Select Municipality" displayexpression="municipalityName" orderby="municipalityName:asc"></wm-form-field>
+                                                            <wm-form-field name="municipalities" displayname="What municipality would you like to do business with?" show="true" primary-key="false" generator="assigned" key="municipalities" type="list" is-related="true" readonly="false" required="true" widget="select"
+                                                            placeholder="Select Municipality" displayexpression="municipalityName" orderby="municipalityName:asc"></wm-form-field>
+                                                        </wm-gridcolumn>
+                                                    </wm-gridrow>
+                                                    <wm-gridrow name="gridrow11_1">
+                                                        <wm-gridcolumn columnwidth="12" name="gridcolumn12_1">
+                                                            <wm-label padding="unset 0.5em" name="label6" caption="Note: some municipalities require the submission of an additional &quot;Contractor Application Form&quot; in order to be approved in their municipality. You will automatically be redirected to that form when you use the &quot;+Add Municipality&quot; button if it is required."></wm-label>
                                                         </wm-gridcolumn>
                                                     </wm-gridrow>
                                                 </wm-layoutgrid>
                                                 <wm-form-field name="id" displayname="Id" show="false" primary-key="true" generator="identity" key="id" type="integer" readonly="true" required="true" step="0" widget="number" inputtype="number" placeholder=""></wm-form-field>
-                                                <wm-form-field name="approvalStatus" displayname="Approval Status" show="false" primary-key="false" generator="assigned" key="approvalStatus" type="string" readonly="false" required="false"
-                                                widget="text" maxchars="255" inputtype="text" placeholder="Enter value" defaultvalue="Pending"></wm-form-field>
-                                                <wm-form-field name="vendor" displayname="Vendor" show="false" primary-key="false" generator="assigned" key="vendor" type="list" is-related="true" readonly="false" required="false" widget="select"
-                                                placeholder="Select value" dataset="bind:Variables.CurrentVendorObj.dataSet" datafield="All Fields" displayfield="companyName" defaultvalue="bind:Variables.CurrentVendorObj.firstRecord"></wm-form-field>
-                                                <wm-form-action key="save" display-name="Add Municipality" show="true" class="form-save btn-primary" iconclass="wi wi-plus" title="Save" action="saveAction($event);saveAction1($event)" disabled="bind:Widgets.municipalities.datavalue == null"
-                                                type="button" update-mode="true"></wm-form-action>
-                                                <wm-form-action key="cancel" display-name="Cancel" show="true" class="form-cancel btn-secondary" iconclass="wi wi-cancel" title="Cancel" action="cancel()" disabled="false" type="button"
+                                                <wm-form-field name="approvalStatus" displayname="Approval Status" show="false" primary-key="false" generator="assigned" key="approvalStatus" type="string" readonly="false" required="false" widget="text" maxchars="255" inputtype="text" placeholder="Enter value"
+                                                defaultvalue="Pending"></wm-form-field>
+                                                <wm-form-field name="vendor" displayname="Vendor" show="false" primary-key="false" generator="assigned" key="vendor" type="list" is-related="true" readonly="false" required="false" widget="select" placeholder="Select value" dataset="bind:Variables.CurrentVendorObj.dataSet"
+                                                datafield="All Fields" displayfield="companyName" defaultvalue="bind:Variables.CurrentVendorObj.firstRecord"></wm-form-field>
+                                                <wm-form-action key="save" display-name="Add Municipality" show="true" class="form-save btn-primary" iconclass="wi wi-plus" title="Save" action="saveAction($event);saveAction1($event)" disabled="bind:Widgets.municipalities.datavalue == null" type="button"
                                                 update-mode="true"></wm-form-action>
+                                                <wm-form-action key="cancel" display-name="Cancel" show="true" class="form-cancel btn-secondary" iconclass="wi wi-cancel" title="Cancel" action="cancel()" disabled="false" type="button" update-mode="true"></wm-form-action>
                                             </wm-liveform>
                                         </wm-livegrid>
+                                    </wm-gridcolumn>
+                                </wm-gridrow>
+                                <wm-gridrow name="gridrow8">
+                                    <wm-gridcolumn columnwidth="12" name="gridcolumn9_1">
+                                        <wm-label padding="unset 0.5em" name="label9" caption="Note: the &quot;Delete&quot; action icon (and this text) is only visible to CXAdmin. This prevents company admin from deleting applications that have been &quot;Suspended&quot; by a municipality."
+                                        fontweight="bold" fontstyle="italic" accessroles="CXAdmin"></wm-label>
                                     </wm-gridcolumn>
                                 </wm-gridrow>
                             </wm-layoutgrid>
